--- a/src/posts/positions/2015_bmw.md
+++ b/src/posts/positions/2015_bmw.md
@@ -1,6 +1,7 @@
 ---
 title: Innovation Lab Co-Op, BMW Manufacturing
-location: Greenville, SC
+subtitle: Greenville, SC
 description: BMW Description
-date: 2015-01-01
+date: 2015-01
+dateformat: Year
 ---
