--- a/src/posts/positions/2016_mind.md
+++ b/src/posts/positions/2016_mind.md
@@ -5,3 +5,4 @@ description: MIND Lab
 date: 2016-05
 dateformat: Year
 ---
+In Summer 2016, I took the opportunity to explore research in an academic context. I worked with [Dr. Rashmi Jha](https://scholar.google.com/citations?user=mUujTIcAAAAJ&hl=en&oi=ao) in the [MIND Laboratory](http://eecs.ceas.uc.edu/MIND), developing and exploring neuromorphic hardware based on [ReRAM](https://en.wikipedia.org/wiki/Resistive_random-access_memory) technology. In my ten weeks there, I learned about semiconductor fabrication and neuromorphic methods for implementing machine learning in hardware. I contributed to the research conducted in the lab by developing a MATLAB simulation workbench for testing various parameters in relevant learning models.
