Content Update II

--- a/src/posts/positions/2016_mind.md
+++ b/src/posts/positions/2016_mind.md
@@ -1,7 +1,7 @@
 ---
 title: Student Researcher, University of Cincinnati
 subtitle: Cincinnati, OH
-description: MIND Lab
+description: Modeling neuromorphic computing
 date: 2016-05
 dateformat: Year
 ---
