Very clever embedded YouTube lazy load iframes
https://codesandbox.io/s/youtube-iframe-lazy-load-qdzu6?from-embed

--- a/src/posts/projects/2018_rgb.md
+++ b/src/posts/projects/2018_rgb.md
@@ -24,6 +24,16 @@ After remembering how transistors work and assembling and testing the circuit wi
 
 After an afternoon of bug-fixing (you'll notice, in the video below, things like White having a wild HEX value in the serial output thanks to a bug in my brightness-parsing code), I stuck all the components into a project box (may the gods of soldering, electrical tape, and hot glue please forgive me) and gave it a good stress test. Success.
 
-<iframe src="https://www.youtube-nocookie.com/embed/OlqLOugIliA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br>
+<iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/OlqLOugIliA"
+    srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/OlqLOugIliA?autoplay=1><img src=https://img.youtube.com/vi/OlqLOugIliA/hqdefault.jpg alt='Video: ESP8266+HomeKit RGB Strip Test'><span>▶</span></a>"
+    frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+    title="ESP8266+HomeKit RGB Strip Test"
+    loading="lazy"
+></iframe>
 
 <img src="/img/projects-homekitrgb-4.jpg">
